Fixed footer spacing

--- a/styles/components/footer.css
+++ b/styles/components/footer.css
@@ -1,4 +1,5 @@
 footer {
+  padding: 3rem 1rem !important;
   display: flex;
   justify-content: space-between;
 }
@@ -13,5 +14,5 @@ footer svg {
 }
 
 footer svg path {
-  fill: var(--grey-color);
+  fill: var(--grey-text-color);
 }
